tests/unit/default/syntax-error/111-add-u.x.t
---- IN ----
+U|
---- OUT ----
---- ERR ----
syntax: expected <table-columns-ref> after `+U` near `|` at position 2 - at line 1
---- EXIT ----
1
